--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <base href="./PersonalRepo">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
+<link rel="stylesheet" href="/styles.ef46db3751d8e999.css"></head>
 <body>
   <app-root></app-root>
 <script src="runtime.ee396a3891a9c34f.js" type="module"></script><script src="polyfills.382010f6cdd1e1e7.js" type="module"></script><script src="main.0b19a03eb9414c41.js" type="module"></script>
